# Huffman_archiver

./: CMakeLists.txt  README.md  main.cpp
IO/: bufferedReader.cpp  bufferedReader.h
archivator/: archivator.cpp  archivator.h
tester/: tester.cpp  tester.h
